# GEMM

./: .gitignore  CITATION.cff  CLAUDE.md  Dockerfile  LICENSE  README.md  emm.cabal  gemm.cabal
app/: Main.hs  TUI.hs
bench/: Bench.hs  analyze.py  benchmark.py  plot_complexity.py  plot_complexity_tree.py  results.csv
cbits/: gemm_init.c
ffi/c/examples/: example.c  test_all.c
ffi/include/: gemm.h
ffi/julia/GEMM/: Project.toml
ffi/julia/GEMM/src/: GEMM.jl
ffi/julia/examples/: example.jl
ffi/python/examples/: example.py
ffi/python/gemm/: __init__.py
ffi/r/: gemm.R
ffi/r/examples/: example.R
ffi/r/src/: gemm_r.c
ffi/rust/examples/: example.rs
ffi/rust/gemm/: Cargo.toml
ffi/rust/gemm-sys/: Cargo.toml  build.rs
ffi/rust/gemm-sys/src/: lib.rs
ffi/rust/gemm/src/: lib.rs
scripts/: build-ffi.sh
src/EMM/: AdmissibleSequences.hs  EilenbergMacLane.hs  ElementaryComplex.hs  GradedGroups.hs  JSON.hs  LaTeX.hs  Types.hs  Words.hs
src/GEMM/: AdmissibleSequences.hs  CLI.hs  Certificate.hs  EilenbergMacLane.hs  ElementaryComplex.hs  FFI.hs  GradedGroups.hs  JSON.hs  LaTeX.hs  Schema.hs  Types.hs  Words.hs
test/: Spec.hs
test/EMM/: AdmissibleSequencesSpec.hs  EilenbergMacLaneSpec.hs  ElementaryComplexSpec.hs  GradedGroupsSpec.hs  TypesSpec.hs
test/GEMM/: AdmissibleSequencesSpec.hs  EilenbergMacLaneSpec.hs  ElementaryComplexSpec.hs  GradedGroupsSpec.hs  TypesSpec.hs
web/: Cache.hs  Main.hs  Server.hs  Templates.hs
