cabal-version:   3.0
name:            gemm
version:         1.0.0
synopsis:        The Generalized Eilenberg-MacLane Machine
description:
  Computes integral (co)homology groups of Eilenberg-MacLane spaces
  K(Z/p^f, n) for any prime p, and K(Z, n).
license:         MIT
license-file:    LICENSE
author:          Alain Clement
maintainer:      alain.clement@unil.ch
category:        Math
build-type:      Simple

library
  exposed-modules:
    GEMM.Types
    GEMM.GradedGroups
    GEMM.AdmissibleSequences
    GEMM.Words
    GEMM.ElementaryComplex
    GEMM.EilenbergMacLane
    GEMM.LaTeX
    GEMM.JSON
  hs-source-dirs:  src
  build-depends:
    base        >= 4.17 && < 5,
    containers  >= 0.6,
    deepseq     >= 1.4,
    text        >= 2.0
  default-language: Haskell2010
  ghc-options:     -Wall

executable gemm
  main-is:         Main.hs
  hs-source-dirs:  app
  build-depends:
    base >= 4.17 && < 5,
    deepseq >= 1.4,
    gemm,
    text >= 2.0
  default-language: Haskell2010
  ghc-options:     -Wall

benchmark gemm-bench
  type:            exitcode-stdio-1.0
  main-is:         Bench.hs
  hs-source-dirs:  bench
  build-depends:
    base       >= 4.17 && < 5,
    gemm,
    containers >= 0.6,
    tasty-bench >= 0.3
  default-language: Haskell2010
  ghc-options:     -Wall -O2

test-suite gemm-test
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  other-modules:
    GEMM.TypesSpec
    GEMM.GradedGroupsSpec
    GEMM.AdmissibleSequencesSpec
    GEMM.ElementaryComplexSpec
    GEMM.EilenbergMacLaneSpec
  hs-source-dirs:  test
  build-depends:
    base        >= 4.17 && < 5,
    gemm,
    containers  >= 0.6,
    hspec       >= 2.11,
    QuickCheck  >= 2.14
  default-language: Haskell2010
  ghc-options:     -Wall
