cabal-version:   3.0
name:            gemm
version:         1.1.0
synopsis:        The Generalized Eilenberg-MacLane Machine
description:
  Computes integral (co)homology groups of Eilenberg-MacLane spaces
  K(Z/p^f, n) for any prime p, and K(Z, n).
license:         MIT
license-file:    LICENSE
author:          Alain Clement
maintainer:      alain.clement@unil.ch
category:        Math
build-type:      Simple

library
  exposed-modules:
    GEMM.Types
    GEMM.GradedGroups
    GEMM.AdmissibleSequences
    GEMM.Words
    GEMM.ElementaryComplex
    GEMM.EilenbergMacLane
    GEMM.LaTeX
    GEMM.JSON
    GEMM.Certificate
    GEMM.CLI
    GEMM.Schema
  hs-source-dirs:  src
  build-depends:
    base        >= 4.17 && < 5,
    containers  >= 0.6,
    deepseq     >= 1.4,
    text        >= 2.0
  default-language: Haskell2010
  ghc-options:     -Wall -fPIC

foreign-library gemm-ffi
  type:              native-shared
  c-sources:         cbits/gemm_init.c
  other-modules:
    GEMM.FFI
    GEMM.Types
    GEMM.GradedGroups
    GEMM.AdmissibleSequences
    GEMM.Words
    GEMM.ElementaryComplex
    GEMM.EilenbergMacLane
    GEMM.LaTeX
    GEMM.JSON
    GEMM.Certificate
  hs-source-dirs:    src
  build-depends:
    base        >= 4.17 && < 5,
    gemm,
    containers  >= 0.6,
    deepseq     >= 1.4,
    text        >= 2.0
  default-language:  Haskell2010
  ghc-options:       -Wall -O2

executable gemm
  main-is:         Main.hs
  other-modules:   TUI, Paths_gemm
  autogen-modules: Paths_gemm
  hs-source-dirs:  app
  build-depends:
    base             >= 4.17 && < 5,
    brick            >= 2.3,
    containers       >= 0.6,
    deepseq          >= 1.4,
    gemm,
    microlens        >= 0.3,
    microlens-mtl    >= 0.2,
    microlens-th,
    text             >= 2.0,
    vty              >= 6.0,
    vty-crossplatform
  default-language: Haskell2010
  ghc-options:     -Wall -threaded

executable gemm-web
  main-is:         Main.hs
  other-modules:   Server, Cache, Templates
  hs-source-dirs:  web
  build-depends:
    base             >= 4.17 && < 5,
    gemm,
    warp             >= 3.3,
    wai              >= 3.2,
    http-types       >= 0.12,
    bytestring       >= 0.11,
    containers       >= 0.6,
    deepseq          >= 1.4,
    stm              >= 2.5,
    text             >= 2.0
  default-language: Haskell2010
  ghc-options:     -Wall -threaded -O2

benchmark gemm-bench
  type:            exitcode-stdio-1.0
  main-is:         Bench.hs
  hs-source-dirs:  bench
  build-depends:
    base       >= 4.17 && < 5,
    gemm,
    containers >= 0.6,
    tasty-bench >= 0.3
  default-language: Haskell2010
  ghc-options:     -Wall -O2

test-suite gemm-test
  type:            exitcode-stdio-1.0
  main-is:         Spec.hs
  other-modules:
    GEMM.TypesSpec
    GEMM.GradedGroupsSpec
    GEMM.AdmissibleSequencesSpec
    GEMM.ElementaryComplexSpec
    GEMM.EilenbergMacLaneSpec
  hs-source-dirs:  test
  build-depends:
    base        >= 4.17 && < 5,
    gemm,
    containers  >= 0.6,
    hspec       >= 2.11,
    QuickCheck  >= 2.14
  default-language: Haskell2010
  ghc-options:     -Wall
